--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ai",
   "version": "1.0.0",
+  "type": "module",
   "main": "src/script.js",
   "scripts": {
     "start": "node src/script.js"
