--- a/package.json
+++ b/package.json
@@ -2,18 +2,14 @@
   "name": "ai",
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "main": "src/script.js",
+ "scripts": {
+  "start": "start http://localhost:3000 && node src/server.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2"
